Changelog
=========

2.0 (unreleased)
----------------

- Added the z3c.autoinclude entry point so this package is automatically loaded
  on Plone 3.3 and above.
  [hannosch]

- Avoid test dependency on quick installer.
  [hannosch]

- Adjust import location for the IWorkflowChain interface and default adapter
  to plone.app.workflow.
  [hannosch]

- Cleaned up package and metadata.
  [hannosch]

1.4.3 (unreleased)
------------------

- Removed settings of the portal_skins tool itself from skins.xml.
  Specifically, allow_any was set to False, which bit me.  [maurits]

1.4.2 (2009-03-05)
------------------

- The `Cancel` button on the local workflow configuration screen was saving
  data as much as the `Save` button. Now it actually cancels the operation.
  [hannosch]

- Made sure you cannot set a workflow configuration on a non-folderish item
  in the site root. The actual configuration would end up on the site root.
  [hannosch]

- Change the local workflow configuration screen to not be shown for the
  site root, even if you accidentally type in the wrong URL.
  [hannosch]

1.4.1 (2009-01-17)
------------------

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Define wtool inside the prefs_workflow_policy_mapping template.
  [hannosch]

- Copied safeEditProperty from CMFPlone.migration_util to avoid a dependency.
  [hannosch]

1.4.0 (2008-11-05)
------------------

- Port evolutions from the 1.3 maintenance branch (old style product).
  [encolpe]

- Fixed bad version in metadata.xml (again)
  [encolpe]

- Removed Favorite content type.
  [hannosch]

- Fixed "ValueError: 'acquisition' is not a workflow ID" in
  prefs_workflow_policy_mapping.  Fix prepared by jhackel.  Fixes
  http://dev.plone.org/plone/ticket/8101
  [maurits]


1.3.2 (2008-06-30)
------------------

- Fixed bad metadata.xml.
  [encolpe]

- Fixed incorrect variable name in exception message.
  [davisagli]