@@ -1,3 +1,6 @@
 <metadata>
-  <version>1.4.0</version>
+  <version>2</version>
+  <dependencies>
+    <dependency>profile-Products.ATContentTypes:default</dependency>
+  </dependencies>
 </metadata>
